# lynx-animator

./: .gitignore  .gitmodules  Animator.csproj  App.axaml  App.axaml.cs  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  LynxAnimator-CS.sln  LynxAnimator-CS.sln.DotSettings  MainView.axaml  MainView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  README.md  Roots.xml  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  credits.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  vcpkg.json
.github/workflows/: unit_tests.yml
LibXfl/: DomDocument.cs  DomFrame.cs  DomLayer.cs  DomShape.cs  DomSymbolItem.cs  DomTimeline.cs  SwatchGroup.cs  SwatchItem.cs
LynxAnimator/: LynxAnimator.csproj  Program.cs
LynxAnimator/GUI/Controls/: StageViewport.cs  SwatchGroupItem.cs
LynxAnimator/Resources/locales/en/: lynxanimator.mo
LynxAnimator/Resources/themes/: theme_spectrum_dark.json  theme_spectrum_light.json
UIKit/: Events.cs  UIKit.csproj  UIKitApplication.cs  Window.cs
UIKit/Controls/: Button.cs  GridLayout.cs  IFocusable.cs  InputField.cs  Label.cs  Layout.cs  ListLayout.cs  Widget.cs
UIKit/Extentions/: SKCanvasExtentions.cs
UIKit/Styles/: UIKAeroStyle.cs  UIKSpectrumStyle.cs  UIKitStyle.cs
XflTests/: DocumentParseTest.fs  Program.fs  ShapeParseTest.fs  SwatchParseTest.fs  SymbolItemParseTest.fs  XflTests.fsproj
build-scripts/: sourcelist.cmake
dialogs/: aboutdialog.cpp  aboutdialog.h  newprojectdialog.cpp  newprojectdialog.h  newprojectdialog.ui
res/: credits.md  main.qrc
res/lang/: LynxAnimator_en_US.ts
res/locales/en/: lynxanimator.mo  lynxanimator.po
res/shaders/: main.frag  main.vert
res/testdata/: swatchListTest.xml
resources/style/: imgui.style
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  intl.h  main.cpp  version.h.in
src/core/: CMakeLists.txt  Logger.cpp  Logger.h
src/data/: ProjectData.hpp  SwatchStructs.hpp
src/gui/: AboutPanel.cpp  AboutPanel.hpp  CMakeLists.txt  DockingTestPanel.cpp  DockingTestPanel.hpp  ImGuiPanel.cpp  ImGuiPanel.hpp  NewProjectPanel.cpp  NewProjectPanel.hpp  Panel.cpp  Panel.h  StagePanel.cpp  StagePanel.hpp  SwatchPanel.cpp  SwatchPanel.hpp  ToolsPanel.cpp  ToolsPanel.hpp  WidgetHelpers.cpp  WidgetHelpers.hpp
src/gui/layoutreader/: CMakeLists.txt  LayoutReader.h  README.md
widgets/: projectstageview.cpp  projectstageview.h
